# tevianGUI

./: .gitignore  CMakeLists.txt  detectRequest.cpp  detectRequest.h  jsonparser.cpp  jsonparser.h  loginrequest.cpp  loginrequest.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  request.cpp  request.h  tevianGUI.pro  teviandll.h  tevianexchanger.cpp  tevianexchanger.h  urls.txt  zoomview.cpp  zoomview.h
